objects/Product2.object
<CustomObject>    
    <fields>
        <fullName>Product_Owner_Phone__c</fullName>
        <formula>Product_Owner__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>CHEOPS L3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accord</fullName>
                </value>
                <value>
                    <fullName>Alliance Access</fullName>
                </value>
                <value>
                    <fullName>Alliance Connect</fullName>
                </value>
                <value>
                    <fullName>Alliance Entry</fullName>
                </value>
                <value>
                    <fullName>Alliance Gateway</fullName>
                </value>
                <value>
                    <fullName>Alliance Messaging Hub (AMH)</fullName>
                </value>
                <value>
                    <fullName>Alliance Warehouse</fullName>
                </value>
                <value>
                    <fullName>BI for Accord</fullName>
                </value>
                <value>
                    <fullName>Browse</fullName>
                </value>
                <value>
                    <fullName>Cloud Services</fullName>
                </value>
                <value>
                    <fullName>Compliance Analytics</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>DMC_Payments</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>FA_P_Banking</fullName>
                </value>
                <value>
                    <fullName>FA_P_Corporates</fullName>
                </value>
                <value>
                    <fullName>FA_P_HVP</fullName>
                </value>
                <value>
                    <fullName>FA_P_LVP</fullName>
                </value>
                <value>
                    <fullName>FA_Securities</fullName>
                </value>
                <value>
                    <fullName>FA_T_Trade</fullName>
                </value>
                <value>
                    <fullName>FIN_Payments</fullName>
                </value>
                <value>
                    <fullName>FIN_Securities</fullName>
                </value>
                <value>
                    <fullName>FIN_Trade</fullName>
                </value>
                <value>
                    <fullName>FIN_Treasury</fullName>
                </value>
                <value>
                    <fullName>Fixed fee</fullName>
                </value>
                <value>
                    <fullName>IA_Payments</fullName>
                </value>
                <value>
                    <fullName>IA_Securities</fullName>
                </value>
                <value>
                    <fullName>IA_System</fullName>
                </value>
                <value>
                    <fullName>IA_Treasury</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAPMaterialNumber__c</fullName>
        <description>CRM-3988 - As a Salesforce internal user, I want to see what is the content of SWIFTSupport and SWIFTCare contract in term of module to guide contacts to a service he is entitled to</description>
        <label>SAP Material Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Commission_Category__c</fullName>
        <label>Sales Commission Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Applicable_to_True_Sales_Commission__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3SKEY</fullName>
                </value>
                <value>
                    <fullName>AMH Interfaces</fullName>
                </value>
                <value>
                    <fullName>AMH Services</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>Lite2 ARG</fullName>
                </value>
                <value>
                    <fullName>Lite2 ASP</fullName>
                </value>
                <value>
                    <fullName>Lite2 Interfaces</fullName>
                </value>
                <value>
                    <fullName>Lite2 Lifeline</fullName>
                </value>
                <value>
                    <fullName>Lite2 Lite converter</fullName>
                </value>
                <value>
                    <fullName>Compliance Analytics</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Consultancy ARG</fullName>
                </value>
                <value>
                    <fullName>Consultancy Lifeline</fullName>
                </value>
                <value>
                    <fullName>Lite2 Consultancy</fullName>
                </value>
                <value>
                    <fullName>Lite2 Peace of Mind consultancy</fullName>
                </value>
                <value>
                    <fullName>FIN Copy</fullName>
                </value>
                <value>
                    <fullName>Interfaces</fullName>
                </value>
                <value>
                    <fullName>KYC profile</fullName>
                </value>
                <value>
                    <fullName>KYC subscription</fullName>
                </value>
                <value>
                    <fullName>My Standards</fullName>
                </value>
                <value>
                    <fullName>My Standards readiness portal</fullName>
                </value>
                <value>
                    <fullName>My Standards T2S readiness</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>Sanctions Screening</fullName>
                </value>
                <value>
                    <fullName>Sanctions Testing</fullName>
                </value>
                <value>
                    <fullName>Support services</fullName>
                </value>
                <value>
                    <fullName>SWIFTRef</fullName>
                </value>
                <value>
                    <fullName>TSU</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Target_Category__c</fullName>
        <label>Sales Target Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3SKEY</fullName>
                </value>
                <value>
                    <fullName>AMH consultancy</fullName>
                </value>
                <value>
                    <fullName>AMH interfaces</fullName>
                </value>
                <value>
                    <fullName>AMH support</fullName>
                </value>
                <value>
                    <fullName>AMH Training</fullName>
                </value>
                <value>
                    <fullName>AU NPP</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CLS STAR</fullName>
                </value>
                <value>
                    <fullName>Compliance Analytics</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Consultancy_AMO</fullName>
                </value>
                <value>
                    <fullName>Consultancy_Analytics</fullName>
                </value>
                <value>
                    <fullName>Consultancy_AUNPP</fullName>
                </value>
                <value>
                    <fullName>Consultancy_BI</fullName>
                </value>
                <value>
                    <fullName>Consultancy_Cloud</fullName>
                </value>
                <value>
                    <fullName>Consultancy_CREST</fullName>
                </value>
                <value>
                    <fullName>Consultancy_GPI</fullName>
                </value>
                <value>
                    <fullName>Consultancy_Interface</fullName>
                </value>
                <value>
                    <fullName>Consultancy_KYC</fullName>
                </value>
                <value>
                    <fullName>Consultancy_MIRS</fullName>
                </value>
                <value>
                    <fullName>Consultancy_PDQ</fullName>
                </value>
                <value>
                    <fullName>Consultancy_PM</fullName>
                </value>
                <value>
                    <fullName>Consultancy_SanctionsScreening</fullName>
                </value>
                <value>
                    <fullName>Consultancy_SanctionsTesting</fullName>
                </value>
                <value>
                    <fullName>Consultancy_Standards</fullName>
                </value>
                <value>
                    <fullName>Consultancy_T2S</fullName>
                </value>
                <value>
                    <fullName>Consultancy_TE</fullName>
                </value>
                <value>
                    <fullName>Consultancy ARG</fullName>
                </value>
                <value>
                    <fullName>Consultancy Lifeline</fullName>
                </value>
                <value>
                    <fullName>Correspondent Monitoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_alert_category_Level_2__c</fullName>
        <label>Sales alert category - Level 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_alert_category_level_1__c</fullName>
        <label>Sales alert category - level 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_target_group__c</fullName>
        <label>Sales Target Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3SKEY</fullName>
                </value>
                <value>
                    <fullName>AMH interfaces</fullName>
                    <label>AMH</label>
                </value>
                <value>
                    <fullName>AMH consultancy</fullName>
                </value>
                <value>
                    <fullName>AU NPP</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>Cloud family</fullName>
                    <label>Cloud</label>
                </value>
                <value>
                    <fullName>CLS STAR</fullName>
                </value>
                <value>
                    <fullName>Compliance Analytics</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Correspondent Monitoring</fullName>
                </value>
                <value>
                    <fullName>Daily Validation Reports</fullName>
                </value>
                <value>
                    <fullName>FIN Copy</fullName>
                </value>
                <value>
                    <fullName>gpi</fullName>
                </value>
                <value>
                    <fullName>Interfaces</fullName>
                </value>
                <value>
                    <fullName>KYC</fullName>
                </value>
                <value>
                    <fullName>MIRS</fullName>
                </value>
                <value>
                    <fullName>MyStandards</fullName>
                </value>
                <value>
                    <fullName>Name screening</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Payment Controls</fullName>
                </value>
                <value>
                    <fullName>Payments Data Quality</fullName>
                </value>                
                <value>
                    <fullName>Sanctions Screening</fullName>
                </value>
                <value>
                    <fullName>Sanctions Testing</fullName>
                </value>
                <value>
                    <fullName>Support services</fullName>
                    <label>Support</label>
                </value>
                <value>
                    <fullName>SWIFTRef</fullName>
                </value>
                <value>
                    <fullName>T2S VAN</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Transaction Screening</fullName>
                </value>
                <value>
                    <fullName>TSU</fullName>
                </value>
                <value>
                    <fullName>WebAccess (as a competing channel)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <description>CRM-3826 - Commercial Product - New fields &apos;Service Type&apos; and &apos;TV codes&apos; for Professional Service products</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption Services</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Initiatives and Project Support</fullName>
                </value>
                <value>
                    <fullName>Integration Services</fullName>
                </value>
                <value>
                    <fullName>Learning Services</fullName>
                </value>
                <value>
                    <fullName>Maintenance Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Price_in_default_Currency__c</fullName>
        <label>Standard Price in default Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suitability_Assessment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is a Suitability Assessment required for this product?</inlineHelpText>
        <label>Suitability Assessment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TF_Record_Id_18_char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF Record Id 18 char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TV_Code_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR #40162657</description>
        <label>TV Code Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TVcodes__c</fullName>
        <description>CRM-3826 - Commercial Product - New fields &apos;Service Type&apos; and &apos;TV codes&apos; for Professional Service products</description>
        <label>TV code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TV50000003 - NBI - Standards</fullName>
                    <label>TV50000003 - NBI Standards/ISO20022</label>
                </value>
                <value>
                    <fullName>TV50000010 - Compliance Analytics</fullName>
                </value>
                <value>
                    <fullName>TV50000011 - BI Analytics &amp; Insights</fullName>
                </value>
                <value>
                    <fullName>TV50000013 - KYC</fullName>
                </value>
                <value>
                    <fullName>TV50000015 - RMA</fullName>
                </value>
                <value>
                    <fullName>TV50000016 - Sanctions Screening</fullName>
                </value>
                <value>
                    <fullName>TV50000017 - Sanctions Testing</fullName>
                </value>
                <value>
                    <fullName>TV50000019 - Connectivity (incl. Alliance Connect)</fullName>
                </value>
                <value>
                    <fullName>TV50000023 - Security</fullName>
                </value>
                <value>
                    <fullName>TV50000024 - Alliance Access</fullName>
                </value>
                <value>
                    <fullName>TV50000026 - Connector for T2S</fullName>
                </value>
                <value>
                    <fullName>TV50000027 - IPLA &amp; Integrator</fullName>
                </value>
                <value>
                    <fullName>TV50000028 - Sanctions Connector</fullName>
                </value>
                <value>
                    <fullName>TV50000029 - Alliance Entry</fullName>
                </value>
                <value>
                    <fullName>TV50000030 - Alliance Gateway</fullName>
                </value>
                <value>
                    <fullName>TV50000031 - Alliance Messaging Hub (AMH)</fullName>
                </value>
                <value>
                    <fullName>TV50000032 - Alliance Lifeline</fullName>
                </value>
                <value>
                    <fullName>TV50000034 - Alliance Lite2</fullName>
                </value>
                <value>
                    <fullName>TV50000037 - Alliance Remote Gateway</fullName>
                </value>
                <value>
                    <fullName>TV50000038 - SIL</fullName>
                </value>
                <value>
                    <fullName>TV50000044 - MI - AUNPP</fullName>
                </value>
                <value>
                    <fullName>TV50000045 - MI - CLS</fullName>
                </value>
                <value>
                    <fullName>TV50000046 - CREST</fullName>
                </value>
                <value>
                    <fullName>TV50000049 - MI - GLI</fullName>
                </value>
                <value>
                    <fullName>TV50000053 - MI - Other (e.g. EBA)</fullName>
                </value>
                <value>
                    <fullName>TV50000054 - MI - T2S</fullName>
                </value>
                <value>
                    <fullName>TV50000055 - MIRS</fullName>
                </value>
                <value>
                    <fullName>TV50000056 - MyStandards</fullName>
                </value>
                <value>
                    <fullName>TV50000063 - AMO</fullName>
                </value>
                <value>
                    <fullName>TV50000064 - SWIFTRef</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Product_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Tech Product Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>True_Sales_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR#40129181</description>
        <label>True Sales Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unweighted_Points__c</fullName>
        <description>GDF 24/11 Comp Plan</description>
        <label>Unweighted Points</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video_based_Product_Info__c</fullName>
        <description>QT-5992 This field should only be visible (and editable) in the product2 for an admin profile.</description>
        <label>Video based Product Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>    
    <listViews>
        <fullName>All_active_commercial_products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>SAPMaterialNumber__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>NBI_Category__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Type__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Owner__c</columns>
        <columns>Product_Owner_Email__c</columns>
        <columns>Product_Owner_Phone__c</columns>
        <columns>Default_Currency__c</columns>
        <columns>Sales_Commission_Category__c</columns>
        <columns>Applicable_to_True_Sales_Commission__c</columns>
        <columns>Sales_Target_Category__c</columns>
        <columns>Sales_target_group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All active commercial products</label>
    </listViews>         
</CustomObject>